exercises/k8s/ex13 - ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ngnix
  name: nginx
  namespace: ex13
spec:
  ports:
  - name: nginx80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
