exercises/k8s/ex13 - ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
  name: nginx
  namespace: ex13
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.nip.io
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx.nip.io
    secretName: nipiocert
